Edit search brewery by query

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </main>
     <!--- API RESPONSE --->
     <div class="result result-hidden" id="result"></div>
-    <ul class="result result-hidden" id="result-list"></ul>
+    <ul class="response result-hidden" id="result-list"></ul>
     <script src="/app.js"></script>
   </body>
 </html>
