--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <option value="by_city">City</option>
             <option value="by_state">State</option>
             <option value="by_country">Country</option>
-            <option value="by_postal">Zip Code</option>
           </select>
         </div>
         <input
@@ -58,6 +57,9 @@
     <!--- API RESPONSE --->
     <div class="result result-hidden" id="result"></div>
     <ul class="response result-hidden" id="result-list"></ul>
+    <div class="remove-notfound" id="not-found">
+      <h2>Sorry! 0 results found.</h2>
+    </div>
     <script src="/app.js"></script>
   </body>
 </html>
