--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Almendra+SC&family=Cormorant+Unicase:wght@300;400;500;600;700&family=Pirata+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/public/img/brewtrail-icon.png" />
   </head>
   <body>
     <main class="search-section">
@@ -54,7 +55,7 @@
         />
       </section>
     </main>
-    <!--- API RESPONSE --->
+    <!--- API RESPONSE -->
     <div class="result result-hidden" id="result"></div>
     <ul class="response result-hidden" id="result-list"></ul>
     <div class="remove-notfound" id="not-found">
